unpackaged/main/default/objects/Task_Time_Split__c/Task_Time_Split__c.object-meta.xml
<CustomObject>
    <description>Splits task times down to a per-day basis</description>
    <label>Task Time Split</label>
    <nameField>
        <displayFormat>TaskTimeSplit-{000000}</displayFormat>
        <label>Task Time Split Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Time Splits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>