unpackaged/main/default/objects/Task_Time_Split__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <formula>Task_Time__r.pse__Project_Task__r.pse__Project__r.pse__Region__r.BU_Code__c</formula>
    <label>BU</label>
    <type>Text</type>
</CustomField>