unpackaged/main/default/objects/Task_Time_Split__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <label>Days</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>