unpackaged/main/default/objects/Task_Time_Split__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>ERP Error Message.</description>
    <label>ErrorMessage</label>
    <type>TextArea</type>
</CustomField>