unpackaged/main/default/objects/Task_Time_Split__c/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <formula>OR (
      (Hours__c  &lt;&gt;  0.0 &amp;&amp; Not(IsNull(Hours__c))),

      ( Distance__c &lt;&gt; 0.0 &amp;&amp; Not(IsNull(Distance__c))),
      
       (Days__c != 0.0 &amp;&amp; Not(IsNull(Days__c))) ,
   
       Per_Diem__c


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filter</label>
    <type>Checkbox</type>
</CustomField>