unpackaged/main/default/objects/Task_Time_Split__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>Populated by ERP Integration</description>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>