unpackaged/main/default/objects/Task_Time_Split__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>TEXT(Task_Time__r.pse__Timecard__r.Location__c)</formula>
    <label>Location</label>
    <type>Text</type>
</CustomField>