unpackaged/main/default/objects/Task_Time_Split__c/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <formula>Task_Time__r.pse__Project_Task__r.Order_Id__c</formula>
    <label>Order Id</label>
    <type>Text</type>
</CustomField>