unpackaged/main/default/objects/Task_Time_Split__c/fields/Per_Diem__c.field-meta.xml
<CustomField>
    <fullName>Per_Diem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Per Diem</label>
    <type>Checkbox</type>
</CustomField>