unpackaged/main/default/objects/Task_Time_Split__c/fields/SyncDate__c.field-meta.xml
<CustomField>
    <fullName>SyncDate__c</fullName>
    <description>Date and Time of the ERP SYNC.</description>
    <label>SyncDate</label>
    <type>DateTime</type>
</CustomField>