unpackaged/main/default/objects/Task_Time_Split__c/fields/Task_Time__c.field-meta.xml
<CustomField>
    <fullName>Task_Time__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Time</label>
    <referenceTo>pse__Task_Time__c</referenceTo>
    <relationshipLabel>Task Time Splits</relationshipLabel>
    <relationshipName>Task_Time_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>